--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
     "parcel:build": "parcel build src/index.html --out-dir docs --public-url https://www.tristanpendergrass.com/laughing-system/",
     "postcss:watch": "postcss src/index.pcss -o src/index.css --env development -w",
     "postcss:build": "postcss src/index.pcss -o src/index.css --env production",
-    "clean-dev-windows": "rmdir /s /q dist .cache",
-    "clean-prod-windows": "rmdir /s /q docs .cache",
+    "clean-dev-windows": "if exist \".cache\\\" rmdir /s /q .cache & if exist \"dist\\\" rmdir /s /q dist",
+    "clean-prod-windows": "if exist \".cache\\\" rmdir /s /q .cache & if exist \"docs\\\" rmdir /s /q docs",
     "clean-dev-mac": "rm -rf dist .cache",
     "clean-prod-mac": "rm -rf docs .cache",
     "build": "npm-run-all -s clean-prod-windows postcss:build parcel:build",
